# larin_coursework_6_skymarket

./: DockerFile  README.md  pyproject.toml  requirements.txt
.run/: cw6.run.xml
skymarket/ads/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/documentation/: urls.py
skymarket/fixtures/: users.json
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py  urls.py
